syntax = "proto3";

package idl;

service Agent {
    rpc CheckDiskSpaceOnAgents (CheckDiskSpaceRequestToAgent) returns (CheckDiskSpaceReplyFromAgent) {}
    rpc AgentExecuteUpgradePrimariesSubStep (UpgradePrimariesRequest) returns (UpgradePrimariesReply) {}
    rpc CreateSegmentDataDirectories (CreateSegmentDataDirRequest) returns (CreateSegmentDataDirReply) {}
    rpc CopyMasterDirectoryToSegmentDirectories (CopyMasterDirRequest) returns (CopyMasterDirReply) {}
    rpc StopAgent(StopAgentRequest) returns (StopAgentReply) {}
}

message UpgradePrimariesRequest {
    string OldBinDir = 1;
    string NewBinDir = 2;
    string NewVersion = 3;
    repeated DataDirPair DataDirPairs = 4;
}

message DataDirPair {
    string OldDataDir = 1;
    string NewDataDir = 2;
    int32  OldPort    = 3;
    int32  NewPort    = 4;
    int32  Content    = 5;
}

message UpgradePrimariesReply {}

message FileSysUsage {
    string Filesystem = 1;
    double Usage = 2;
}

message CheckDiskSpaceRequestToAgent {}

message CheckDiskSpaceReplyFromAgent {
    repeated FileSysUsage ListOfFileSysUsage = 1;
}

message CreateSegmentDataDirRequest {
	repeated string datadirs = 1;
}

message CreateSegmentDataDirReply {}

message CopyMasterDirRequest {
	string masterDir = 1;
	repeated string datadirs = 2;
}

message CopyMasterDirReply {}

message StopAgentRequest {}
message StopAgentReply {}
